syntax = "proto3";
package webrtc;

import "google/protobuf/timestamp.proto";

service WebRtc {
  rpc CreateSession(CreateSessionRequest) returns (CreateSessionResponse);
  rpc StartSession(StartSessionRequest) returns (Empty);
  rpc StopSession(StopSessionRequest) returns (Empty);
  rpc GetStats(GetStatsRequest) returns (GetStatsResponse);
  rpc CreatePeerConnection(CreatePeerConnectionRequest)
      returns (CreatePeerConnectionResponse);
}

// Reusable empty message
message Empty {}

// Create Session
message CreateSessionRequest { string name = 1; }
message CreateSessionResponse { string session_id = 1; }

// Start Session
message StartSessionRequest { string session_id = 1; }

// Stop Session
message StopSessionRequest { string session_id = 1; }

// Get Stats
message GetStatsRequest { string session_id = 1; }
message SessionStats {
  string id = 1;
  string name = 2;
  uint64 num_peer_connections = 3;
  string state = 4;
  google.protobuf.Timestamp start_time = 5;
  google.protobuf.Timestamp stop_time = 6;
  uint64 elapsed_time = 7;
}
message GetStatsResponse { SessionStats session = 1; }

// Create PeerConnection
message CreatePeerConnectionRequest {
  string session_id = 1;
  string name = 2;
}
message CreatePeerConnectionResponse { string peer_connection_id = 1; }
